# language-model

./: .env.example.sh  .gitignore  README.md  poetry.toml  pyproject.toml
language_model/: __init__.py  api.py  configuration.py  configuration_test.py  lightning_checker.py
language_model/data/data_pipelines/: __init__.py  apply_vocabulary_to_tokens.py  apply_vocabulary_to_tokens_test.py  build_vocabulary_from_tokens.py  build_vocabulary_from_tokens_test.py  filter_tokens.py  filter_tokens_test.py  simple_space_split.py  simple_space_split_test.py  split_sentences_by_index.py  split_sentences_by_index_test.py
language_model/data/utils/: __init__.py  wiki2_transformer.py  wiki2_transformer_test.py
language_model/models/: __init__.py
language_model/models/transformer_from_scratch/: __init__.py  attention.py  attention_head.py  attention_head_test.py  attention_test.py  decoder.py  decoder_block.py  decoder_block_test.py  decoder_test.py  encoder.py  encoder_block.py  encoder_block_test.py  encoder_test.py  feed_forward.py  feed_forward_test.py  multi_head_attention.py  multi_head_attention_test.py  positional_encoding.py  positional_encoding_test.py  qkv.py  residual.py  residual_test.py  shapes.py  shapes_test.py  token_embedding.py  token_embedding_test.py  transformer.py  transformer_block.py  transformer_module.py  transformer_module_test.py  transformer_pass.py  transformer_test.py  word_embedding.py  word_embedding_test.py
language_model/scripts/: __init__.py  infer.py  train.py
notebooks/: attention_from_scratch.ipynb  positional_encoding_from_scratch.ipynb  transformer_from_scratch.ipynb  word_embedding_from_scratch.ipynb
notebooks/experiments/: transformer_from_scratch.ipynb  wiki2_corpus.ipynb
notebooks/tutorials/: attention_from_scratch.ipynb  positional_encoding_from_scratch.ipynb  pytorch_transformers_from_scratch.ipynb
