# Copyright (c) 2023 Sophie Katz
#
# This file is part of Language Model.
#
# Language Model is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later version.
#
# Language Model is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with Language
# Model. If not, see <https://www.gnu.org/licenses/>.

[tool.poetry]
name = "language-model"
version = "0.1.0"
description = "A toy language model."
authors = ["Sophie Katz <sophie@sophiekatz.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.10"
ipywidgets = "^8.0.6"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
cython = "^0.29.34"
torch = [
    { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp39-cp39-win_amd64.whl", platform = "win32", python = ">=3.9 < 3.10" },
]
lightning = "^2.0.2"
gradio = "^3.33.1"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylance = "^0.4.4"
pytest = "^7.3.1"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
