# Copyright (c) 2023 Sophie Katz
#
# This file is part of Language Model.
#
# Language Model is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# Language Model is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# Language Model. If not, see <https://www.gnu.org/licenses/>.

[tool.poetry]
name = "language-model"
version = "0.1.0"
description = "A toy language model."
authors = ["Sophie Katz <sophie@sophiekatz.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 <3.12"
ipywidgets = "^8.0.6"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
cython = "^0.29.34"
torch = [
    { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp39-cp39-win_amd64.whl", platform = "win32", python = ">=3.11 <3.12" },
    { url = "https://files.pythonhosted.org/packages/c8/21/25020cfdd9f564a72f400ee491610e50cb212e8add8031abaa959af6451e/torch-2.0.1-cp311-cp311-manylinux1_x86_64.whl", platform = "linux", python = ">=3.11 <3.12" },
]
lightning = "^2.0.2"
gradio = "^3.33.1"
scipy = "^1.10.1"
seaborn = "^0.12.2"
torchtext = "^0.15.2"
portalocker = "^2.7.0"
torchdata = "^0.6.1"
python-dotenv = "^1.0.0"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
pylance = "^0.4.4"
pytest = "^7.3.1"
ipykernel = "^6.22.0"
pylint-flask = "^0.6"
pycodestyle = "^2.10.0"
mypy = "^1.4.0"
bandit = "^1.7.5"
pydocstyle = "^6.3.0"
vulture = "^2.7"
isort = "^5.12.0"
black = "^23.3.0"
comet-ml = "^3.33.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
